# xcs

./: .gitignore  .gitmodules  AUTHORS  README.md  main.html
onboard/: .gitignore  CMakeLists.txt  README  env  onboard-forever.sh  onboard.bat  onboard_gui-frontier.tcl  onboard_gui-frontier2-safe.tcl  onboard_gui-frontier2.tcl  onboard_gui.tcl  onboard_linear_gui.tcl  start.bat  startF2.bat  startF2.sh
onboard/data/dfgs/: dataplayer-video  dataplayer_localization  dataplayer_sample  default  dodo  dodo_manual  frontier_template  parrot  parrot and localization  parrot_manual_localization  parrot_manual_logging  vrep_manual
onboard/data/logs/: compare.sh  dbg-ptam.sh  debug2path.sh  default_log-video.avi  display_ang_phi.sh  display_vel_x.sh  display_vel_z.sh  path.sh  rotate.sh
onboard/data/logs/ekf_tests/: forward_backward_0,4-video.avi  forward_backward_0,4.txt  forward_with_ptam-video.avi  rotate-video.avi  rotate.txt  up_down_0,2-video.avi
onboard/data/scripts/: dodo_video  empty  michl
onboard/data/settings/: onboard.xs  xcontrol.xs  xlocalization.xs  xobjects.xs
onboard/dfgs/: default  parrot and localization  parrot and logger  parrot video  test
onboard/doc/: xcs_doc.conf
onboard/logs/: .gitignore  compare.sh  display_ang_theta.sh  display_position_xy.sh  display_position_z.sh  display_rotation_psi.sh  display_vel_y.sh  path.sh  proc_hist.sh  proc_inputs.sh  syn_video_time.sh  timing.txt
onboard/nbproject/: configurations.xml  project.xml
onboard/nbproject/private/: Default.properties  configurations.xml
onboard/project/: KvadrupterXCI.vcxproj  KvadrupterXCI.vcxproj.filters
onboard/src/: AT_Command.cpp  AT_Command.hpp  Adapter.cpp  Adapter.hpp  CMakeLists.txt  CMakeLists_install.txt  Forest.cpp  Forest.hpp  IC2.hpp  Onboard.cpp  Onboard.hpp  XCI.hpp  XCILoader.cpp  XCILoader.hpp  XCI_Parrot.cpp  XCI_Parrot.hpp  ardrone_state.hpp  basic.hpp  connect.u  demo.u  finder.u  main.cpp  navdata_common.h  testAdapter.cpp  video_decode.cpp  video_decode.hpp  video_encapsulation.h  xci_exception.hpp
onboard/src/cmake/: FindArmadillo.cmake  FindLibAV.cmake  FindUrbiAll.cmake  FindXurbi.cmake  common.cmake  config.cmake  config_install.cmake  platforms.cmake  xlibrary.cmake
onboard/src/uobjects/Integrator.uob/: Integrator.hpp  UIntegrator.cpp
onboard/src/xci/: AT_Command.cpp  AT_Command.hpp  XCI_Parrot.hpp  navdata_options.hpp
onboard/src/xcs/: CMakeLists.txt  Exception.cpp  Exception.hpp  LibraryLoader.cpp  LibraryLoader.hpp  Multiton.hpp  ParseException.cpp  ParseException.hpp  SymbolLoader.hpp  exception.cpp  exception.hpp  library_loader.cpp  library_loader.hpp  logging.hpp  multiton.hpp  parse_exception.cpp  parse_exception.hpp  pid.hpp  settings.cpp  settings.hpp  symbol_loader.hpp  tsqueue.hpp  video_decode.cpp  video_decode.hpp  x_settings.cpp  x_settings.hpp  xcs_fce.hpp
onboard/src/xcs/nodes/checkpoint_movement.xob/: CMakeLists.txt  checkpoint_movement.cpp  checkpoint_movement.hpp  x_checkpoint_movement.cpp  x_checkpoint_movement.hpp
onboard/src/xcs/nodes/control.xob/: CMakeLists.txt  control.cpp  control.hpp  pid.hpp  x_control.cpp  x_control.hpp  xcontrol.cpp  xcontrol.hpp
onboard/src/xcs/nodes/datalogger.xob/: CMakeLists.txt  datalogger.cpp  datalogger.hpp  logger_context.hpp  writer_common.hpp  x_datalogger.cpp  x_datalogger.hpp
onboard/src/xcs/nodes/dataplayer.xob/: CMakeLists.txt  video_player.cpp  video_player.hpp  x_dataplayer.cpp  x_dataplayer.hpp
onboard/src/xcs/nodes/ekf.xob/: CMakeLists.txt  ekf.cpp  ekf.hpp  xekf.cpp  xekf.hpp
onboard/src/xcs/nodes/flycontrol_aggregator.xob/: CMakeLists.txt  x_flycontrol_aggregator.cpp  x_flycontrol_aggregator.hpp
onboard/src/xcs/nodes/guiproxy.xob/: CMakeLists.txt  guiproxy.cpp  guiproxy.hpp  video_file_writer.cpp  video_file_writer.hpp
onboard/src/xcs/nodes/hermit_movement.xob/: CMakeLists.txt  hermit_movement.cpp  hermit_movement.hpp  xhermit_movement.cpp  (+1 more)
onboard/src/xcs/onboard/: Adapter.cpp  CMakeLists.txt  Onboard.cpp  Onboard.hpp  XCILoader.hpp
onboard/src/xcs/test/: CMakeLists.txt  main.cpp
onboard/src/xcs/types/: bitmap_type.hpp  cartesian_vector.cpp  cartesian_vector.hpp  cartesian_vector.hxx  checkpoint.cpp  checkpoint.hpp  eulerian_vector.cpp  eulerian_vector.hpp  eulerian_vector.hxx  fly_control.cpp  fly_control.hpp  fly_control.hxx  fly_param.hxx  speed_control.cpp  speed_control.hpp  timestamp.hpp  type_utils.hpp  velocity_control.cpp  velocity_control.hpp
onboard/src/xcs/xci/: CMakeLists.txt  DataReceiver.hpp  SyntacticTypes.hpp  XCI.hpp  connection_error_exception.hpp  data_receiver.hpp  xci.hpp
onboard/urbiscript/: connect.u  control.info  experiments.u  finder.u  gui-demo.u  gui_demo.u  hermit.u  init_onboard.u  localization.info  manual.u  onboard.u  pid_finder-frontier.u  pid_finder-frontier2.u  pid_finder.u  pid_finder_imu.u  settings_collection.u  simulatorStar.bat  simulator_test.u  struct_demo.u  test-player-timing.u  test_time_delay.u  ulogger.u  video-demo.u  video_demo.u  webrtc_demo.u
onboard/urbiscript/boot/: .uignore  adapter.u  aligner.u  boot.u  connect.u  dfg_storage.u  executor.u  frontier2_aligner.u  frontier_aligner.u  functions.u  integrator.u  json_receiver.u  line_master.u  line_smoother.u  logging.u  main.u  node_container.u  onboard_sender.u  pid_finder.u  pid_params.u  ping_reflector.u  x_object.u
onboard/urbiscript/nodes/: executor.u  semantic_receiver.u  semantic_sender.u  x_object.u  xobject.u
onboard/urbiscript/onboard/: onboard.u
onboard/urbiscript/onboard/inc/: node_container.u  script_storage.u
onboard/urbiscript/onboard/nodes/: executor.u  frontier_aligner.u  line_master.u  semantic_sender.u
onboard/urbiscript/onboard/user/: 45  infinite  nic
onboard/urbiscript/purgatory/: experiments.u  init_onboard.u  simulatorStar.bat  simulator_test.u
onboard/urbiscript/purgatory/boot/: aligner_linear.u  frontier_aligner.u  functions.u  line_smoother.u  pid_params.u
onboard/xsetting/: ddfg.xs  xobjects.xs  xobjectsPrivate.xs
onboard/xsettings/: onboard.xs  xcontrol.xs  xlocalization.xs  xobjects.xs  xobjectsPrivate.xs
(+282 files in other folders)
